<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/header"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_gravity="right" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:background="@color/lightGrey">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/cameraPicture"
                    android:src="@drawable/ic_photo_camera_black_48dp"
                    android:layout_gravity="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="46dp"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/device_photo"
                    android:id="@+id/textView"
                    android:layout_gravity="center" />

            </FrameLayout>

            <View
                android:layout_width="match_parent"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_height="1dp"
                android:background="@color/lightGrey" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/device_name"
                android:paddingLeft="16dp"
                android:paddingBottom="5dp"
                android:id="@+id/deviceNameLabel"
                android:textStyle="bold"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:id="@+id/deviceNameText"
                android:hint="e.g Televisi"
                android:background="@drawable/shape"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/priority"
                android:paddingTop="10dp"
                android:paddingLeft="16dp"
                android:paddingBottom="5dp"
                android:id="@+id/priorityLabel"
                android:textStyle="bold" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/device_id"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:entries="@array/priority_arrays"
                android:id="@+id/spinner"
                android:background="@drawable/shape"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/device_id"
                android:paddingLeft="16dp"
                android:paddingBottom="5dp"
                android:id="@+id/deviceIdLabel"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:id="@+id/deviceIdText"
                android:hint="e.g 127.0.0.1"
                android:background="@drawable/shape"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/save"
                android:textColor="@color/white"
                android:id="@+id/saveDevice"
                android:background="@color/primaryOrange"
                android:layout_marginRight="16dp"
                android:layout_gravity="bottom|end"/>



        </LinearLayout>


    </ScrollView>




</LinearLayout>