<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/header"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/pemakaian_daya"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:id="@+id/deviceOnText"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/powerMeterImage" />

    <TextView
        android:id="@+id/totalPower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="n / n watt"
        android:textSize="16sp"
        android:paddingTop="20dp"/>

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_below="@id/costLabel"
        android:layout_height="1dp"
        android:background="@color/lightGrey" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <ImageButton
            android:src="@drawable/ic_navigate_before_black_36dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="20dp"
            android:background="@android:color/transparent"
            android:id="@+id/previous"
            android:layout_gravity="left" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/powerCost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/biaya_listrik"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="Tanggal"
                android:textSize="16sp" />

        </LinearLayout>

        <ImageButton
            android:src="@drawable/ic_navigate_next_black_36dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:background="@android:color/transparent"
            android:id="@+id/after"
            android:layout_gravity="right" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Rupiah"
        android:textSize="30sp"
        android:id="@+id/totalCost"
        android:textStyle="bold" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail"
        android:textColor="@color/white"
        android:id="@+id/costDetailButton"
        android:background="@color/primaryOrange"
        android:layout_gravity="center_horizontal|bottom" />

</LinearLayout>